--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
+    "@tanstack/react-query": "^5.32.1",
     "antd": "^5.16.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
